--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@
 
 .home-system { padding-bottom: 10px; }    /* CAN I COMBINE THESE??? */
 .home-memorycard { padding-bottom: 10px; }
-.home-preview { padding-bottom: 10px; v}
+.home-overview { padding-bottom: 10px; v}
 .home-network { padding-bottom: 10px; }
 .home-arms { padding-bottom: 0px; margin-bottom: 0px; }
 .home-progress { padding-bottom: 0px; margin-bottom: 0px; }
